--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ html, body {
 
 
 .body-css{
-    background-image: url('9099100.jpg');
+    background-image: url('./assets/9099100.jpg');
     width: 100%;
     height: 100%;
     border: none;
@@ -413,3 +413,4 @@ html, body {
 ::-webkit-scrollbar-thumb:hover {
     background: #e7e5e5;
 }
+
