--- a/style480.css
+++ b/style480.css
@@ -218,7 +218,7 @@
 
 
     .body-css {
-        background-image: url('9099100.jpg');
+        background-image: url('./assets/9099100.jpg');
         width: 100%;
         height: 100%;
         border: none;
